--- a/springboot-mybatis-plus/src/main/resources/application.yml
+++ b/springboot-mybatis-plus/src/main/resources/application.yml
@@ -5,10 +5,11 @@ spring:
     password: root
     url: jdbc:mysql://127.0.0.1:3306/springboot-mybatis?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
 
-# mybatis配置
-mybatis:
-  mapper-locations: classpath:mapper/**/*.xml
-  type-aliases-package: com.hitopo.entity
+mybatis-plus:
   configuration:
-    use-generated-keys: true
-    map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations: classpath:mapper/**/*.xml
+  global-config:
+    db-config:
+      id-type: auto
+      table-prefix: tb_
