完成整个项目

--- a/springboot-vue-crud/src/main/resources/application.yml
+++ b/springboot-vue-crud/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
   servlet:
     context-path: /simple-shop
 
+  tomcat:
+    basedir: C:\Users\Administrator\Desktop\springboot-learn\springboot-vue-crud
+
 
 spring:
   datasource:
